# RAG_System

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  doc_rag.ipynb  multimodal_rag.ipynb  pyproject.toml  rag_scipdf_core.py  requirements.txt  users.db
chroma_scipdfs/: chroma.sqlite3
notebooks/: Advanced_rag_with _metadata.ipynb
object_store/tables/: 03af6da2-fef0-40ab-b999-33b50c4910da.md  0ba78106-9acb-4a62-bc73-dced55bb2b2c.md  1d1362bb-1cfd-4b4d-b9d5-6ac6f8197d87.md  1f48da4f-bcd9-4043-a926-06080c111fbc.md  22e5043a-fd6d-4690-ada5-8e01cd653a5c.md  2d24bf72-9c95-4ac1-8d10-469fac83f584.md  31688d0f-daeb-46b4-8059-e9c900e48c82.md  38168626-eddb-49b2-b4f7-c997d786c489.md  38dfb73a-ea7a-4562-9422-bdd1e1df91f7.md  3b7a235f-be23-4bbd-ab5e-a04e361e39a5.md  3bf6f2a1-5081-4942-b2bc-365e282b75c0.md  3da3c0e3-85fe-4789-a49f-b6282152fb8c.md  457486b7-a6e7-4ebb-b029-066453403642.md  5b60dc45-9069-4e4c-bb19-d2093e4b0fab.md  6b073541-8f6d-4a4d-a92b-5f52e4e13e78.md  82a5fa82-44bc-4876-857f-96c1fd7bc10c.md  939e636f-fe02-468c-8e16-86dd76073f75.md  98d1e3f3-1a4d-47c0-98e5-e09ad3ce29c7.md  b859d642-c34e-4ecb-9a31-d03885a27a48.md  c391e030-b2c7-43f4-bec1-55755c6ada43.md  d2edd54e-da35-4161-a5e5-e8e44966c17c.md  d64a370a-5a99-42e3-9752-34f3f1acc617.md  ea835d4a-7f1b-4f75-b6a9-86cd0afa3522.md  ece1fd3d-6196-4393-bd97-196196c09322.md
static/: style.css
templates/: chat.html  login.html  upload.html
